<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_ios_share_24"
        app:iconTintMode="src_in"
        app:iconTint="?colorPrimary" />

    <item
        android:id="@+id/action_share_url"
        android:icon="@drawable/ic_qr_code_2_24"
        android:title="@string/profile_share_url"
        app:iconTint="?colorPrimary"
        app:iconTintMode="src_in" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete_24"
        app:iconTintMode="src_in"
        app:iconTint="?colorPrimary" />

</menu>